[project]
name = "monitoring"
version = "0.1.0"
description = ""
authors = [
    {name = "www",email = "pyostr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "infisicalsdk (>=1.0.13,<2.0.0)",
    "aio-pika (>=9.5.8,<10.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "colored (>=2.3.1,<3.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "pybit (>=5.13.0,<6.0.0)",
    "cachetools (>=6.2.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
